<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Inventory</string>

    <!-- Label for overflow menu option that inserts fake inventory data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all book data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All books</string>

    <!-- Title text for the empty view, which describes the empty image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Nothing yet</string>

    <!-- Subtitle text for the empty view that prompts the user to add a book [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a book</string>

    <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a book</string>

    <!-- Label for editor menu option to save book and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current book [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for Book attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_book">Book</string>

    <!-- Label for supplier information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier">Supplier</string>

    <!-- Label for price information in the editor [CHAR LIMIT=30] -->
    <string name="category_price">Price</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_name">Name</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_quantity">Quantity</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_price">Price</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_phonenumber">Supplier Phone Number</string>

    <!-- Units for price of the book (dollars) [CHAR LIMIT=5] -->
    <string name="unit_book_price">$</string>

    <!-- Label for dropdown menu option if the book is supplied by Barnes and Noble [CHAR LIMIT=20] -->
    <string name="supplier_barnesandnoble">Barnes and Noble</string>

    <!-- Label for dropdown menu option if the book is supplied by Amazon [CHAR LIMIT=20] -->
    <string name="supplier_amazon">Amazon</string>

    <!-- Label for dropdown menu option if the book is an Scholastic [CHAR LIMIT=20] -->
    <string name="supplier_scholastic">Scholastic</string>

    <!-- Label for dropdown menu phone number option  [CHAR LIMIT=20] -->
    <string name="supplier_phone_number">Supplier Phone Number</string>

    <!-- Label for Amazon phone number option  [CHAR LIMIT=20] -->
    <string name="amazon_phone_number">2064742345</string>

    <!-- Label for Scholastic phone number option  [CHAR LIMIT=20] -->
    <string name="scholastic_phone_number">4242236543</string>

    <!-- Label for Barnes and Noble phone number option  [CHAR LIMIT=20] -->
    <string name="barnesandnoble_phone_number">2532255555</string>

    <string name="unknown_phone">Unknown phone</string>

    <!-- Toast message in editor when new book has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_successful">Book saved</string>

    <!-- Toast message in editor when new book has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_failed">Error with saving book</string>

    <!-- New app bar title for the edit book label [CHAR LIMIT=NONE] -->
    <string name="editor_activity_title_edit_book">Edit book</string>

    <!-- Toast message in editor when current book was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_successful">Book updated</string>
    <!-- Toast message in editor when current book has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_failed">Error with updating book</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current book [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current book was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_successful">Book deleted</string>
    <!-- Toast message in editor when current book has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <!-- Dialog message to ask the user to confirm deleting the current book [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this book?</string>
    <!-- Dialog button text for the option to confirm deleting the current book [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>
    <!-- Dialog button text for the option to cancel deletion of the current book [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <string name="editor_activity_title_new_item">New Item</string>
    <string name="editor_activity_title_edit_item">Edit Item</string>

    <string name="category_quantity">Quantity</string>

    <!-- Label for the book's quantity if the quantity is unknown [CHAR LIMIT=20] -->
    <string name="unknown_quantity">Unknown quantity</string>

    <string name="name_required">Name is required</string>
    <string name="price_required">Price is required</string>
    <string name="quantity_required">Quantity is required</string>
    <string name="supplier_required">Supplier is required</string>
    <string name="phone_required">Phone is required</string>

    <string name="sell">sell</string>
    <string name="unknown">Unknown</string>
    <string name="quantityTag">Quantity:</string>
    <string name="priceTag">Price:</string>
    <string name="itemTag">Item:</string>
    <string name="supplierTag">Supplier:</string>
    <string name="phoneTag">Phone:</string>

    <string name="quantity_error">No item available</string>
</resources>
