<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of books -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/activity_margin">
    <LinearLayout
        android:id="@+id/tags"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/itemTag"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorText" />

        <TextView
            android:id="@+id/price_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/priceTag"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorText" />

        <TextView
            android:id="@+id/quantity_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/quantityTag"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorText" />


        <TextView
            android:id="@+id/supplier_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/supplierTag"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorText" />

        <TextView
            android:id="@+id/phone_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/phoneTag"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorText" />
    </LinearLayout>

<LinearLayout
    android:id="@+id/item_info"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_toRightOf="@+id/tags"
    android:paddingLeft="16dp"
    >

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#2B3D4D"
        android:text="Item:"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="Price:"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#2B3D4D" />

    <TextView
        android:id="@+id/quantity"
        android:text="Quantity:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#2B3D4D" />

    <TextView
        android:id="@+id/supplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#2B3D4D"
        android:text="Supplier:"/>

    <TextView
        android:id="@+id/phonenumber"
        android:text="Phone Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#2B3D4D" />

</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toRightOf="@id/item_info">

        <Button
            android:id="@+id/sale_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:focusable="false"
            android:text="@string/sell"
            android:layout_marginLeft="16dp"
            android:textColor="@android:color/white"
           />
    </LinearLayout>
</RelativeLayout>